fixed overlap of create note/folder buttons on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -280,7 +280,7 @@ p {
 }
 
 /* Edits for smaller screens (mobile) */
-@media (width <= 500px) {
+@media (width <= 700px) {
     nav {
         width: 4rem;
     }
