--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -467,20 +467,22 @@ main {
     background-color: var(--dark-button-color-hover);
 }
 
-@media (width <= 500px) {
+@media (width <= 700px) {
     /* Add note and add folder button under header */ 
-    header {
-        position: relative;
-        height: 11em;
+    
+    .header-top-main {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 3em;
     }
 
     .top-right-buttons {
-        display: flex;
-        margin-left: 20%;
-        margin-right: 25%;
-        padding-top: 6em;
+        margin-left: 4rem;
+        width: 80%;
+        margin: auto;
+        position: relative;
     }
-    
+
     /* Change size of note display */
     .note-content {
         width: 16em;
