--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -228,7 +228,7 @@ select:focus {
 }
 
 /* Edits for smaller screens (mobile) */
-@media (width <= 500px) { 
+@media (width <= 700px) { 
    #task-form {
       margin-left: 1em;
    }
@@ -310,7 +310,7 @@ select:focus {
    background-color: var(--dark-background-color);
 }
 
-@media (width <= 480px) {
+@media (width <= 700px) {
    #modal {
        width: 90vw;
        height: 90vh;
